@@ -4,6 +4,7 @@ import com.gmail.wizaripost.tgbot.model.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.methods.updatingmessages.DeleteMessage;
+import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageReplyMarkup;
 import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboardMarkup;
@@ -11,6 +12,7 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKe
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.KeyboardRow;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -18,31 +20,35 @@ import java.util.stream.Collectors;
 public class ResponseButtonsTestImpl extends AbstractResponse {
     @Override
     public ResponseEntity generateSendMessage(Update update) {
-//        InlineKeyboardButton button = new InlineKeyboardButton("1");
-//        // Устанавливаем callbackData (например, текст кнопки)
-//        button.setCallbackData("Hello!");
+        InlineKeyboardButton button1 = new InlineKeyboardButton();
+        button1.setText("Новая кнопка 1");
+        button1.setCallbackData("new_callback_1");
 
+        InlineKeyboardButton button2 = new InlineKeyboardButton();
+        button2.setText("Новая кнопка 2");
+        button2.setCallbackData("new_callback_2");
 
-        List<List<String>> buttons = new ArrayList<>();
-        buttons.add(List.of("1"));
-        buttons.add(List.of("2"));
+        InlineKeyboardMarkup inlineKeyboard = new InlineKeyboardMarkup();
+        inlineKeyboard.setKeyboard(Arrays.asList(
+                Arrays.asList(button1),
+                Arrays.asList(button2)
+        ));
 
-        SendMessage responseMessage = new SendMessage();
-        responseMessage.setChatId(String.valueOf(update.getMessage().getChatId()));
-        responseMessage.enableMarkdown(true);
+        EditMessageReplyMarkup editMarkup = new EditMessageReplyMarkup();
+        editMarkup.setChatId(update.getMessage().getChatId());
+        editMarkup.setMessageId(update.getMessage().getMessageId());
+        editMarkup.setReplyMarkup(inlineKeyboard);
 
-
-//        ReplyKeyboardMarkup markup = this.createInlineKeyboard(buttons);
-//        markup.setOneTimeKeyboard(true);
-//        ReplyKeyboardMarkup markup = new ReplyKeyboardMarkup();
-//        markup.setKeyboard(button);
-//        responseMessage.setReplyMarkup(button);
-
-
-        responseMessage.setText("Hello!");
+//        List<List<String>> buttons = new ArrayList<>();
+//        buttons.add(List.of("1"));
+//        buttons.add(List.of("2"));
+//        SendMessage responseMessage = new SendMessage();
+//        responseMessage.setChatId(String.valueOf(update.getMessage().getChatId()));
+//        responseMessage.enableMarkdown(true);
+//        responseMessage.setText("Hello!");
 
         ResponseEntity response = new ResponseEntity();
-        response.setResponse(responseMessage);
+        response.setResponse(editMarkup);
         return response;
     }
 
